[metadata]
name = rgfrosh
version = attr: rgfrosh.__version__
author = Cory Kinney
author_email = corykinney@knights.ucf.edu
url = https://github.com/corykinney/RGFROSH
description = Frozen shock equations solver.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = rgfrosh
python_requires = >=3.5
setup_requires =
    setuptools >= 46.4.0
install_requires =
    numpy
    typing-extensions
