[metadata]
name = rgfrosh
version = attr: rgfrosh.__version__
author = Cory Kinney
author_email = corykinney@ucf.edu
url = https://github.com/VasuLab/RGFROSH
description = A frozen shock solver for ideal and real gas equations of state.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
setup_requires =
    setuptools >= 46.4.0
install_requires =
    attrs >= 20.1.0
    numpy >=1.10.0
    tabulate >=0.9.0

[options.extras_require]

